--- a/style.css
+++ b/style.css
@@ -17,10 +17,14 @@ body{
     color: #ef8253;
     font-size: 50px;
     z-index: 9999;
+
 }
-#slide2.show{
-    right: 0px;
-   
+#butt.show{
+    right: 200px;
+}
+
+#slide2.show{  
+    display: none;
 }
 
 #slide2{
@@ -30,8 +34,8 @@ body{
     width: 400px;
     height: 100vh;
     position: absolute;
-    transition: all 0.6s ease;
-    right: -400px;
+    display: flex;
+    right: 0px;
     
 }
 .item{
@@ -40,6 +44,7 @@ body{
     font-size: 40px;
     padding-top: 50px;
     transition: all 0.6s ease-in;
+    text-align: center;
     
 }
 .item:hover{
@@ -49,6 +54,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 50px;
+    padding-top: 50px; 
+    transform: translateX(100%);
     
 }
