--- a/style.css
+++ b/style.css
@@ -8,35 +8,39 @@ body{
     background-color: #2d3142;
     max-width: 100%;
     margin: auto;
+    overflow: hidden;
 }
 
 #butt{
     position: absolute;
-    right: 500px;
-    top: 30px;
+    right: 300px;
     color: #ef8253;
     font-size: 50px;
-    z-index: 9999;
+    z-index: 0;
+    transition: all 0.6s ease-in;
+   
 
 }
 #butt.show{
-    right: 200px;
+    right: 300px;
 }
 
-#slide2.show{  
-    display: none;
-}
 
 #slide2{
-    text-align: end;
+    margin-left: auto;
     background-color: #ef8253;
     display: block;
-    width: 400px;
+    width: 250px;
     height: 100vh;
-    position: absolute;
+    transition: all 0.6s ease-in;
     display: flex;
-    right: 0px;
+    transform: translateX(100%);
     
+    
+} 
+#slide2.show{  
+   transform: translateX(0%);
+   
 }
 .item{
     text-decoration: none;
@@ -47,14 +51,15 @@ body{
     text-align: center;
 
 }
+
 .item:hover{
     border-bottom: 5px solid #fff;
+   
 }
 .flex{
     display: flex;
     flex-direction: column;
-    align-items: center;
     padding-top: 50px; 
-    transform: translateX(100%);
+    padding-left: 50px;
     
 }
