--- a/style.css
+++ b/style.css
@@ -14,15 +14,17 @@ body{
 #butt{
     position: absolute;
     right: 300px;
-    color: #ef8253;
-    font-size: 50px;
+    color: #fff;
+    font-size: 80px;
     z-index: 0;
-    transition: all 0.6s ease-in;
+    transition: all 1s ease-in;
+    
    
 
 }
 #butt.show{
-    right: 300px;
+    color: red;
+    font-size: 40px;
 }
 
 
@@ -32,7 +34,7 @@ body{
     display: block;
     width: 250px;
     height: 100vh;
-    transition: all 0.6s ease-in;
+    transition: all 1s ease-in;
     display: flex;
     transform: translateX(100%);
     
@@ -47,13 +49,13 @@ body{
     color: white;
     font-size: 40px;
     padding-top: 50px;
-    transition: all 0.6s ease-in;
+    transition: all 0.3s ease-in;
     text-align: center;
 
 }
 
 .item:hover{
-    border-bottom: 5px solid #fff;
+    border-bottom: 1px solid #fff;
    
 }
 .flex{
